--- a/codepoint-dump.cabal
+++ b/codepoint-dump.cabal
@@ -48,7 +48,7 @@ cabal-version:       >=1.10
 
 executable codepoint-dump
   -- .hs or .lhs file containing the Main module.
-  main-is:             main.hs
+  main-is:             Main.hs
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
@@ -57,11 +57,10 @@ executable codepoint-dump
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8,
-                       text >=1.1 && <1.2
+  build-depends:       base >=4.7 && <4.8
 
   -- Directories containing source files.
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
