--- a/codepoint-dump.cabal
+++ b/codepoint-dump.cabal
@@ -64,4 +64,6 @@ executable codepoint-dump
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
+
+  ghc-options:           -O2 -Wall
   
